[package]
name = "pm2ls-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "net", "rt-multi-thread"] }
cpal = "0.13.4"
rb = "0.3.2"
audiopus_sys = "0.2.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"