[package]
name = "pm2ls-server"
version = "0.1.0"
authors = ["Norizon <contact@norichi.com>"]
edition = "2021"
description = "A simple UDP server for audio transmission using OPUS codec."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["macros", "net", "rt-multi-thread"] }
cpal = "0.13.4"
rb = "0.3.2"
audiopus_sys = "0.2.1"
pretty_env_logger = "0.4.0"
log = "0.4.14"
clap = { version = "3.0.10", features = ["derive"] }